--- a/style.css
+++ b/style.css
@@ -1,3 +1,21 @@
+
 #header {
-    width: 90%;
+    width: 100%;
+    height: auto;
+}
+
+#header-image {
+  position: relative;
+  text-align: center;
+  color: white;
+}
+#header-text-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 2.5%;
+    border: 5px solid rgb(183, 110, 109);
+    border-radius: 10px;
+    background-color: rgba(0, 0, 0, 0.7);
 }
