--- a/style.css
+++ b/style.css
@@ -9,13 +9,32 @@
   text-align: center;
   color: white;
 }
+#header-pic {
+    width: 95%;
+}
 #header-text-container {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 2.5%;
-    border: 5px solid rgb(183, 110, 109);
+    border: 5px solid rgb(183, 115, 103);
     border-radius: 10px;
     background-color: rgba(0, 0, 0, 0.7);
+}
+#header-text {
+}
+
+.banner--fadebottom {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%,-60%);
+    height: 9rem;
+    width: 95%;
+    background-image: linear-gradient(
+        180deg,
+        transparent, 
+        rgba(32, 14, 1, 0.8), 
+        #111
+    );
 }
