--- a/style.css
+++ b/style.css
@@ -181,7 +181,7 @@ body {
     max-width: 90%;
     margin: 0 auto;
     padding: 40px;
-    column-count: 5;
+    column-count: 3;
     column-gap: 25px;
     background: rgba(221, 139, 124, 0.9);
     box-shadow: 0px 0px 20px rgba(221, 139, 124, 0.9);
@@ -205,4 +205,20 @@ body {
     transition: 0.3s;
     z-index: 99;
 
+}
+
+@media screen and (max-width: 1024px) {
+    .container {
+        column-count: 3;
+    }
+}
+@media screen and (max-width: 640px) {
+    .container {
+        column-count: 2;
+    }
+}
+@media screen and (max-width: 450px) {
+    .container {
+        column-count: 1;
+    }
 }
