--- a/style.css
+++ b/style.css
@@ -186,7 +186,6 @@ body {
     background: rgba(221, 139, 124, 0.9);
     box-shadow: 0px 0px 20px rgba(221, 139, 124, 0.9);
     border-radius: 10px;
-    z-index: -20;
 }
 .gallery-pic {
     width: 100%;
@@ -195,15 +194,14 @@ body {
     margin-bottom: 20px;
     padding: 8px;
     margin-top: 10px;
-    background: rgba(65, 105, 225, 0.9);
+    /* background: rgba(65, 105, 225, 0.9); */
     box-sizing: border-box;
-    z-index: 99;
+    transform: translateY(10px);
 }
 .gallery-pic:hover {
-    transform: scale(1.025);
+    transform: scale(1.05);
     transition-timing-function: ease;
     transition: 0.3s;
-    z-index: 99;
 
 }
 
