--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ body {
   margin-top: 15px;
   font-weight: 100;
   color: royalblue;
-  background-color: rgba(245, 245, 245, .95);
+  background-color: rgba(245, 245, 245, .9);
   border-radius: 5px;
   font-size: 2vw;
   text-align: center;
@@ -150,7 +150,7 @@ body {
 
 /* Gallery */
 #gallery {
-    padding-bottom: 5vw;
+    padding-bottom: 0vw;
     padding-top: 5vw;
     background-color: rgba(0, 0, 0, 0.4);
 }
@@ -170,8 +170,8 @@ body {
 #gallery-image-box {
     margin-top: 15px;
     color: royalblue;
-    background-color: rgba(245, 245, 245, .95);
-    box-shadow: 0px 0px 20px rgba(245, 245, 245, .95);
+    background-color: rgba(245, 245, 245, .85);
+    box-shadow: 0px 0px 20px rgba(245, 245, 245, 1);
     border-radius: 5px;
     font-size: 2vw;
     text-align: center;
@@ -265,10 +265,10 @@ body {
 .text p{
     line-height: 10px;
 }
-i {
+.fa-instagram {
     color: rgba(221, 139, 124, 0.9);
 }
-i:hover {
+.fa-instagram:hover {
     background-color: blueviolet;
     color: white;
     padding: 1%;
@@ -288,6 +288,102 @@ i:hover {
     display: flex;
     flex-wrap: wrap;
 }
+#gift {
+    padding-bottom: 0vw;
+    padding-top: 5vw;
+    background-color: rgba(0, 0, 0, 0.6);
+}
+#our-gift {
+    padding: 15px;
+}
+#gift-box {
+    position: relative;
+    text-align: center;
+    color:white
+}
+#gift-text-box {
+    margin-top: 15px;
+    font-weight: 100;
+    color: royalblue;
+    background-color: rgba(245, 245, 245, .9);
+    box-shadow: 0px 0px 20px rgba(221, 139, 124, 0.9);
+    border-radius: 5px;
+    font-size: 2vw;
+    text-align: center;
+    padding: 4%;
+  }
+.gift-link-box {
+    padding: 0;
+}
+.gift-link {
+    font-size: 15vw;
+    padding-top: 7%;
+    padding: 15%;
+    background: rgba(221, 139, 124, 0.6);
+    border-radius: 10px;
+}
+.fa-dollar-sign {
+    width: 95%;
+}
+#sponsor {
+    padding-bottom: 0vw;
+    padding-top: 5vw;
+    background-color: rgba(0, 0, 0, 0.6);
+}
+#our-sponsor {
+    padding: 15px;
+}
+#sponsor-box {
+    position: relative;
+    text-align: center;
+    color:white
+}
+#sponsor-text-box {
+    margin-top: 15px;
+    font-weight: 100;
+    color: royalblue;
+    background-color: rgba(245, 245, 245, .9);
+    box-shadow: 0px 0px 20px rgba(221, 139, 124, 0.9);
+    border-radius: 5px;
+    font-size: 2vw;
+    text-align: center;
+    padding: 4%;
+}
+.spon-pic {
+    max-height: 250px;
+    max-width: 250px;
+    min-width: 250px;
+    min-height: 250px;
+    padding: 0;
+    margin: 0;
+}
+#zoom {
+    padding-bottom: 0vw;
+    padding-top: 5vw;
+    background-color: rgba(0, 0, 0, 0.6);
+}
+#our-zoom {
+    padding: 15px;
+}
+#zoom-box {
+    position: relative;
+    text-align: center;
+    color:white
+}
+#zoom-text-box {
+    margin-top: 15px;
+    font-weight: 100;
+    color: royalblue;
+    background-color: rgba(245, 245, 245, .9);
+    box-shadow: 0px 0px 20px rgba(221, 139, 124, 0.9);
+    border-radius: 5px;
+    font-size: 2vw;
+    text-align: center;
+    padding: 4%;
+  }
+.zoom {
+    width: 50%;
+}
 @media screen and (min-width: 1025px) {
     .container-2 {
         column-count: 2;
@@ -306,6 +402,9 @@ i:hover {
     }
     .container-4 {
         column-count: 2;
+    }
+    .spon-container {
+        column-count: 1;
     }
 }
 @media screen and (max-width: 640px) {
